fixed palto icon being invisible

--- a/Palto/Palto/static/Palto/css/navigation.css
+++ b/Palto/Palto/static/Palto/css/navigation.css
@@ -15,10 +15,6 @@ nav {
     font-size: 150%;
 }
 
-#navigation-icon {
-    width: 20%;
-}
-
 #navigation-title {
     font-size: 300%;
 }
